kyverno-networkpolicy-training/code/np-tests/policies/20-frontend-public.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-public
  namespace: shop
spec:
  podSelector:
    matchLabels: {app: frontend}
  policyTypes: [Ingress]
  ingress:
  - ports:
    - {port: 8080, protocol: TCP}
