kyverno-networkpolicy-training/code/np-tests/policies/30-api-from-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-from-frontend
  namespace: shop
spec:
  podSelector:
    matchLabels: {app: api}
  policyTypes: [Ingress]
  ingress:
  - from:
    - podSelector:
        matchLabels: {app: frontend}
    ports:
    - {port: 8080, protocol: TCP}
  - from:
    - namespaceSelector:
        matchLabels: {purpose: monitoring}
    ports:
    - {port: 9113, protocol: TCP}
